updated to simplify extract coefficient function and test